<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:layout_height="303dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapseLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:contentScrim="?attr/colorPrimary"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar"
            >

            <ImageView
                android:id="@+id/neighbour_Avatar"
                android:layout_width="411dp"
                android:layout_height="304dp"
                android:layout_marginBottom="470dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.137"
                tools:src="@tools:sample/avatars" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:visibility="visible"
                app:layout_collapseMode="pin"></android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/mcv_detail_text"
                android:layout_width="match_parent"
                android:layout_height="193dp"
                android:layout_margin="6dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="1dp">

                    <TextView
                        android:id="@+id/textViewNameNeighbourg"
                        android:layout_width="361dp"
                        android:layout_height="29dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="29dp"
                        android:text="Name"
                        android:textColor="#090909"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toTopOf="@+id/txtAdresseNeighbour"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <ImageView
                        android:id="@+id/imgLyt"
                        android:layout_width="389dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="52dp"
                        android:background="#F1EFEF"
                        android:scaleType="centerCrop"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@android:drawable/menuitem_background" />

                    <ImageView
                        android:id="@+id/imgvAdresse"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="24dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewNameNeighbourg"
                        app:srcCompat="@drawable/ic_baseline_room_24" />

                    <ImageView
                        android:id="@+id/imgvPhone"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toStartOf="@+id/txtAdresseNeighbour"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imgvAdresse"
                        app:srcCompat="@drawable/ic_baseline_local_phone_24" />

                    <TextView
                        android:id="@+id/txtAdresseNeighbour"
                        android:layout_width="294dp"
                        android:layout_height="26dp"
                        android:layout_marginStart="52dp"
                        android:layout_marginTop="10dp"
                        android:text="Adresse"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imgLyt" />

                    <TextView
                        android:id="@+id/txtPhoneNeighbour"
                        android:layout_width="294dp"
                        android:layout_height="26dp"
                        android:layout_marginStart="52dp"
                        android:layout_marginTop="16dp"
                        android:text="Phone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtAdresseNeighbour" />

                    <ImageView
                        android:id="@+id/imgFaceBook"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imgvPhone"
                        app:srcCompat="@drawable/ic_language_pink_24" />

                    <TextView
                        android:id="@+id/txtFaceBook"
                        android:layout_width="294dp"
                        android:layout_height="26dp"
                        android:layout_marginStart="52dp"
                        android:layout_marginTop="20dp"
                        android:text="www.Facebook.com/"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtPhoneNeighbour" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/txtLyt"
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <android.support.v7.widget.CardView
                android:id="@+id/cv_detail_mtext"
                android:layout_width="match_parent"
                android:layout_height="156dp"
                android:layout_margin="6dp"
                android:layout_marginTop="2dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtAboutMeTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="A propos de moi"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:textStyle="normal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imgLytAboutMe"
                        android:layout_width="389dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="52dp"
                        android:background="#EFEBEB"
                        android:scaleType="centerCrop"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@android:drawable/menuitem_background" />

                    <TextView
                        android:id="@+id/txtAboutMe"
                        android:layout_width="331dp"
                        android:layout_height="85dp"
                        android:layout_margin="6dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imgLytAboutMe" />
                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingButtonFavorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:scaleType="center"
        android:backgroundTint="#FCFCFC"
        app:borderWidth="0dp"
        app:fabSize="normal"
        app:fabCustomSize="@dimen/fab_width"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_baseline_star_border_yellow_24" />


</android.support.design.widget.CoordinatorLayout>